; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_remove_variables.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_remove_variables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @remove_variables to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_variables(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = call i32 (...) @is_efi_boot()
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %34

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @find_slot(i32 %14, i8* %15, i32* %8)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 1
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %34

20:                                               ; preds = %13
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @efi_remove_boot_option(i32 %21)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* %9, align 4
  store i32 %26, i32* %4, align 4
  br label %34

27:                                               ; preds = %20
  %28 = load i32, i32* %7, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %27
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @remove_from_order(i32 %31)
  store i32 %32, i32* %4, align 4
  br label %34

33:                                               ; preds = %27
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %33, %30, %25, %19, %12
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @is_efi_boot(...) #1

declare dso_local i32 @find_slot(i32, i8*, i32*) #1

declare dso_local i32 @efi_remove_boot_option(i32) #1

declare dso_local i32 @remove_from_order(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
